scss mobx cors echarts antd

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+dd, dl, dt, h1, h2, h3, h4, p {
+    margin: 0;
+    font-size: 1em;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
