--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -259,3 +259,15 @@
     }
   }
 }
+.ant-carousel {
+  .slick-slide {
+    text-align: center;
+    height: 160px;
+    line-height: 160px;
+    background: #364d79;
+    overflow: hidden;
+    h3{
+      color: #fff;
+    }
+  }
+}
