重置路由后，EchartOptions 部分数据丢失，在Store中将其补上；增加foreign页面

--- a/src/components/business/Header.module.scss
+++ b/src/components/business/Header.module.scss
@@ -62,7 +62,7 @@
     background-image: url(https://mat1.gtimg.com/news/images/inews/2020/feiyan/area/icon_guonei2.png);
   }
 }
-.itemOversea {
+.itemForeign {
   @include yellow500();
   &:before {
     background-image: url(https://mat1.gtimg.com/news/images/inews/2020/feiyan/area/icon_quanqiu2.png);
