海外疫情 洲际模块charts

--- a/src/pages/foreign/Foreign.module.scss
+++ b/src/pages/foreign/Foreign.module.scss
@@ -13,3 +13,10 @@
     }
   }
 }
+
+.foreignCountriesConfirmChartWrap {
+  margin-top: 2*$padding1;
+}
+.contentWeekConfirmChartWrap {
+  margin-top: 2*$padding1;
+}
