海外疫情洲际table

--- a/src/components/basic/MyTable.module.scss
+++ b/src/components/basic/MyTable.module.scss
@@ -10,6 +10,10 @@ table {
   font-size: 3.2vw;
   font-weight: 400;
   color: #222;
+  &:first-child {
+    text-align: left;
+    padding-left: 3vw
+  };
   &:last-child {
     border-right: 0;
   }
