--- a/src/style/constant.scss
+++ b/src/style/constant.scss
@@ -8,22 +8,20 @@ $fontSize1: 2.667vw;
 
 @mixin centerAbsolute {
   position: absolute;
+  content: ".";
+  font-size: 0;
+  line-height: 0;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
 
 @mixin centerVerticalAbsolute {
   position: absolute;
+  content: ".";
+  font-size: 0;
+  line-height: 0;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
   transform: translateY(-50%);
 }
 
