--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -324,7 +324,7 @@
 }
 
 .listWrap {
-  margin: 4vw 2*$padding1 0;
+  margin: 4vw 2*$padding1 40vw;
 }
 
 .fixedTableHeader {
@@ -339,4 +339,22 @@
 }
 .hiddenHeader {
   display: none;
+}
+.fixedShareBtn {
+  position: fixed;
+  z-index: 9;
+  left: 25vw;
+  right: 25vw;
+  bottom: 10vw;
+  height: 12vw;
+  border-radius: 12vw;
+  background-color: #0079fb;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  span {
+    color: #ffffff;
+    font-size: 4.3vw;
+    margin-left: 2vw;
+  }
 }
